pyinterp/pyinterp/pyinterp/tests/must_pass/builtins/list/errors/slice_set_wrong_size1.py
lst = [1, 2, 3]
lst[::2] = [1, 2, 3, 4, 5]